add btn pdf download

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
     <header class="bg-dark text-white text-center py-3">
         <h1 class="mb-0">Cartilla Informativa</h1>
         <p>Seguridad Ocupacional</p>
+        <a href="docs/doc.pdf" class="btn btn-primary mt-2" download>
+            <i class="fas fa-file-download"></i> Descargar PDF
+        </a>
     </header>
 
     <main class="container my-5">
