--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
     <header class="bg-dark text-white text-center py-3">
         <h1 class="mb-0">Cartilla Informativa</h1>
-        <p>Seguridad Ocupacional</p>
+        <p>Seguridad Ocupacional by Emanuel Diaz</p>
         <a href="docs/doc.pdf" class="btn btn-primary mt-2" download>
             <i class="fas fa-file-download"></i> Descargar PDF
         </a>
@@ -165,7 +165,7 @@
     </main>
 
     <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2025 Cartilla de Seguridad Ocupacional. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Cartilla de Seguridad Ocupacional. Todos los derechos reservados. Hecho por, Emanuel Diaz Villa.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
